# control_system

./: .gitignore
doc/: CONFIG_GUIDE.md  GL20-RTU-ECT_1.1.4.0-1-HCFA_X5E_Servo_Driver-3-Hans_Robot_Elfin-3.xml  HCFAX3E copy.xml  HCFAX3E.xml  HCFAX3E_complex.xml  TESTING_GUIDE.md  complex_config.json  example_complex.c  io_board.xml  test_arm.xml  usage_guide_complex_scenario.md
test/: CMakeLists.txt  compile_commands.json
test/include/: test_all.h
test/src/: test_all.c  test_io_raw.c
